AP-2007-11-06-2: Bugfix:      During the installation the admin user should create web.xml file
                 Bugster:     6620253
                 Review:      JG

AP-2007-11-06-1: Bugfix:     Added Wallclock Time example query for Postgresql db.

AP-2007-11-06-0: Correction of ARCo product version and loaded library

JG-2007-11-06-0: CVS:         Created V60_BRANCH.
                              Future 6.0 ARCo patches will be done from this
                              branch, beginning with 6.0u12.

AP-2007-11-05-0: Correction of previous commits

JO-2007-11-01-0: Correction of commit JO-2007-10-24-0

AP-2007-11-01-0: Correction of commit AP-2007-10-31-0

JO-2007-10-31-1: Correction of commit JO-2007-10-31-0:

JO-2007-10-31-0: Bugfix:      Long running jobs cause incorrect usage summary from ARCo database
                 Bugster:     6618599
                 Issue:       2414
                 Review:      AP

AP-2007-10-31-0: Bugfix:      o Oracle, Postgres DWB should prompt for tablespace 
                              where indexes and tables should be created
                              o recompile views dependend on altered tables
                 Bugster:     6565821
                 Issue:       2283
                 Review:      JO

AP-2007-10-31-0: Bugfix:      o Oracle, Postgres DWB should prompt for tablespace 
                              where indexes and tables should be created
                              o recompile views dependend on altered tables
                 Bugster:     6565821
                 Issue:       2283
                 Review:      JO

JO-2007-10-24-0: Bugfix:      ARCO view_accounting filters out parallel job usage incorrectly
                 Bugster:     6620930
                 Issue:       2415
                 Review:      AP

JO-2007-10-23-0: Bugfix:      o Returned method commit and rollback in Database class to previous state,