@@ -1115,24 +1115,31 @@
       <item>
          <description>
             Create view view_fixed_stimes - view containing the correct start_times 
-            for the intermediate line.
+            for the intermediate line and ju_exit_status.
         </description>
         <sql>
             CREATE VIEW view_fixed_stimes AS SELECT
                u1.ju_parent,
                u1.ju_id,
                coalesce(max(u2.ju_end_time), u1.ju_start_time) AS fstart_time,
-               u1.ju_end_time
+               u1.ju_end_time,
+               CASE
+                  WHEN u1.ju_end_time = max(u3.ju_end_time) then u1.ju_exit_status
+                  ELSE -1
+               END AS fexit_status
             FROM
                sge_job_usage u1
                LEFT OUTER JOIN sge_job_usage u2
                   ON u2.ju_parent = u1.ju_parent
                   AND u2.ju_end_time &lt; u1.ju_end_time
+               LEFT OUTER JOIN sge_job_usage u3
+                  ON u3.ju_parent = u1.ju_parent    
             GROUP BY
                u1.ju_parent,
                u1.ju_id,
                u1.ju_start_time,
-               u1.ju_end_time
+               u1.ju_end_time,
+               u1.ju_exit_status
             ORDER BY
                u1.ju_parent,
                u1.ju_id
@@ -1141,18 +1148,21 @@
       <item>
          <description>
             Update sge_job_usage with the correct ju_start_time values for
-            intermediate lines
+            intermediate lines and ju_exit_status.
          </description>
          <sql>
             UPDATE sge_job_usage n SET
-               ju_start_time = (
+               (ju_start_time, ju_exit_status) = (
                   SELECT 
-                     fstart_time 
+                     fstart_time,
+                     fexit_status
                   FROM 
                      view_fixed_stimes f 
                   WHERE 
                      f.ju_id = n.ju_id
                   )
+             WHERE 
+               n.ju_id in (select ju_id from view_fixed_stimes)
          </sql>            
       </item>
       <item>
@@ -1204,6 +1214,8 @@
                WHERE 
                   n.ju_id = f.ju_id
                )
+            WHERE 
+               n.ju_id in (select ju_id from view_fixed_usages)
          </sql>
       </item>
       <item>
